[package]
name = "limonium"
version = "2.2.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/
[dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["stream"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
colored = "3.0.0"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
clap = "4.5.51"
openssh-sftp-client = "0.15.3"
openssh = "0.11.5"
indicatif = "0.18.2"
regex = "1.12.2"
tempdir = "0.3.7"
futures-util = "0.3.31"
once_cell = "1.21.3"
semver = "1.0.27"
