[package]
name = "limonium"
version = "2.2.9"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/
[dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.13.1", features = ["stream"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.148"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
colored = "3.0.0"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
clap = "4.5.54"
openssh-sftp-client = "0.15.4"
openssh = "0.11.6"
indicatif = "0.18.3"
regex = "1.12.2"
tempdir = "0.3.7"
futures-util = "0.3.31"
once_cell = "1.21.3"
semver = "1.0.27"
