[package]
name = "limonium"
version = "2.2.11"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/
[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "native-tls-vendored", "http2", "charset"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
colored = "3.1.1"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.43"
clap = "4.5.58"
openssh-sftp-client = "0.15.4"
openssh = "0.11.6"
indicatif = "0.18.4"
regex = "1.12.3"
tempdir = "0.3.7"
futures-util = "0.3.32"
once_cell = "1.21.3"
semver = "1.0.27"
